# hackathon-2

phase-1/: .gitignore  pyproject.toml
phase-1/.claude/: settings.local.json
phase-1/.claude/agents/: phase-1-todo-cli.md
phase-1/.specify/memory/: constitution.md
phase-1/history/prompts/001-console-todo-app/: 001-phase1-todo-spec-creation.spec.prompt.md  002-implementation-plan-creation.plan.prompt.md  003-task-list-generation.tasks.prompt.md  004-phase1-implementation-complete.green.prompt.md
phase-1/history/prompts/constitution/: 001-initial-constitution-ratification.constitution.prompt.md
phase-1/specs/001-console-todo-app/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
phase-1/specs/001-console-todo-app/checklists/: requirements.md
phase-1/specs/001-console-todo-app/contracts/: cli-interface.md  service-interface.md
phase-1/src/: main.py
phase-1/src/cli/: __init__.py  console.py
phase-1/src/models/: __init__.py  todo.py
phase-1/src/services/: __init__.py  todo_service.py
phase-ii/: .gitignore
phase-ii/.claude/: settings.local.json
phase-ii/backend/: .env.example  requirements.txt
phase-ii/frontend/: .env.local.example  middleware.ts  next.config.js  package-lock.json  package.json  proxy.ts  tailwind.config.js
phase-iii/: CLAUDE.md
phase-iii/.claude/: settings.local.json
phase-iii/backend/: .gitignore  requirements.txt
phase-iii/frontend/: next.config.js  package.json
phase-iv/: docker-compose.yml
phase-v/: docker-compose.dev.yml  docker-compose.infra.yml  docker-compose.yml
(+233 files in other folders)
