[project]
name = "todo-cli"
version = "0.1.0"
description = "Phase I: In-Memory Console Todo Application"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
